--- a/src/components/circlemenu/css/circlemenu.css
+++ b/src/components/circlemenu/css/circlemenu.css
@@ -1,5 +1,5 @@
 #box {
-    background: url('https://sun9-55.userapi.com/6uzqef2pGVz0UMm_8LdLgNscuqVyNk1k-wdkqw/AOk5nr2Xktw.jpg') no-repeat;
+    /*background: url('https://sun9-55.userapi.com/6uzqef2pGVz0UMm_8LdLgNscuqVyNk1k-wdkqw/AOk5nr2Xktw.jpg') no-repeat;*/
     background-size: 100%;
 }
 
