убрал зависимости, убрал imgStyle и spanStyle в массиве данных"

--- a/src/components/circlemenu/css/circlemenu.css
+++ b/src/components/circlemenu/css/circlemenu.css
@@ -1,5 +1,5 @@
 #box {
-    /*background: url('https://sun9-55.userapi.com/6uzqef2pGVz0UMm_8LdLgNscuqVyNk1k-wdkqw/AOk5nr2Xktw.jpg') no-repeat;*/
+    background: url('https://sun9-55.userapi.com/6uzqef2pGVz0UMm_8LdLgNscuqVyNk1k-wdkqw/AOk5nr2Xktw.jpg') no-repeat;
     background-size: 100%;
 }
 
@@ -166,6 +166,12 @@
     color: #ffffff;
     position: absolute;
     margin-top: 28px;
+}
+
+.circle-slice:hover {
+    color: white !important;
+    border: 6px solid #ABBABB !important;
+    background: radial-gradient(transparent 120px, #424242 120px) !important;
 }
 
 .circle-item-img {
