--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -1350,6 +1350,7 @@ h4 {
     align-items: center;
     width: 100%;
     height: 19%;
+    min-height: 50px;
 }
 
 .c-contact-box .c-player-contact:hover {
@@ -2035,6 +2036,7 @@ BankCard
     display: flex;
     flex-direction: row;
     margin-bottom: 8px;
+    min-height: 60px;
 }
 .m-box-sms:hover{
     background: #0000002b;
