--- a/src/components/inventory/css/img-items.css
+++ b/src/components/inventory/css/img-items.css
@@ -2071,6 +2071,58 @@
     background: url("../img/weapon/scope.png") no-repeat;
 }
 
+.img-474 {
+    background: url("../img/all-items/item_474.png") no-repeat;
+}
+
+.img-475 {
+    background: url("../img/all-items/item_475.png") no-repeat;
+}
+
+.img-476 {
+    background: url("../img/all-items/item_476.png") no-repeat;
+}
+
+.img-477 {
+    background: url("../img/all-items/item_477.png") no-repeat;
+}
+
+.img-478 {
+    background: url("../img/all-items/item_478.png") no-repeat;
+}
+
+.img-479 {
+    background: url("../img/all-items/item_479.png") no-repeat;
+}
+
+.img-480 {
+    background: url("../img/all-items/item_480.png") no-repeat;
+}
+
+.img-481 {
+    background: url("../img/all-items/item_481.png") no-repeat;
+}
+
+.img-482 {
+    background: url("../img/all-items/item_482.png") no-repeat;
+}
+
+.img-483 {
+    background: url("../img/all-items/item_483.png") no-repeat;
+}
+
+.img-484 {
+    background: url("../img/all-items/item_484.png") no-repeat;
+}
+
+.img-485 {
+    background: url("../img/all-items/item_485.png") no-repeat;
+}
+
+.img-486 {
+    background: url("../img/all-items/item_486.png") no-repeat;
+}
+
 .icon-item {
     width: 41px;
     height: 41px;
