--- a/src/components/inventory/css/img-items.css
+++ b/src/components/inventory/css/img-items.css
@@ -2123,6 +2123,206 @@
     background: url("../img/all-items/item_486.png") no-repeat;
 }
 
+.img-487 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-488 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-489 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-490 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-491 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-492 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-493 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-494 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-495 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-496 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-497 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-498 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-499 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-500 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-501 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-502 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-503 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-504 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-505 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-506 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-507 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-508 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-509 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-510 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-511 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-512 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-513 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-514 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-515 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-516 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-517 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-518 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-519 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-520 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-521 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-522 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-523 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-524 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-525 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-526 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-527 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-528 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-529 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-530 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-531 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-532 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-533 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-534 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-535 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
+.img-536 {
+    background: url("../img/all-items/item_487-536.png") no-repeat;
+}
+
 .icon-item {
     width: 41px;
     height: 41px;
