--- a/src/components/accountmenu/css/general.css
+++ b/src/components/accountmenu/css/general.css
@@ -318,11 +318,15 @@
 
 .accountmenu__content__cards__item__list {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.02);
     height: 4rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    width: 100%;
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
 }
 
 .accountmenu__content__cards__item__list:first-child {
@@ -366,4 +370,18 @@
 
 .accountmenu__content__cards__cars__list {
     
+}
+
+.accountmenu__content__cards__item__list__title {
+    font-family: 'RobotoLight';
+    font-size: 1.2rem;
+    color: #d2d2d2;
+    text-transform: uppercase;
+}
+
+.accountmenu__content__cards__item__list__subtitle {
+    font-family: 'RobotoBold';
+    font-size: 1rem;
+    color: #fff;
+    text-transform: uppercase;
 }
