--- a/src/components/accountmenu/css/general.css
+++ b/src/components/accountmenu/css/general.css
@@ -195,6 +195,7 @@
     color: #fff;
     text-transform: uppercase;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .accountmenu__content__cards__status__circle__btext {
