--- a/src/components/accountmenu/css/property.css
+++ b/src/components/accountmenu/css/property.css
@@ -16,7 +16,6 @@
 }
 
 .accountmenu__content__cards__house {
-    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -106,7 +105,7 @@
 .accountmenu__content__cards__house__hprice {
     padding-left: 3.5rem;
     padding-right: 3.5rem;
-    margin-top: auto;
+    margin-top: 5vh;
     display: flex;
     flex-direction: column;
 }
@@ -350,8 +349,21 @@
     padding-right: 3.5rem;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
+.accountmenu__content__cards__cars__list::-webkit-scrollbar {
+    width: 0.8rem;
+  }
+    
+  .accountmenu__content__cards__cars__list::-webkit-scrollbar-track {
+    background: #303030;
+  }
+    
+  .accountmenu__content__cards__cars__list::-webkit-scrollbar-thumb {
+    background: #fff;
+ }
+ 
 .accountmenu__content__cards__car__img {
     display: flex;
     height: 25vh;
