--- a/src/components/accountmenu/css/property.css
+++ b/src/components/accountmenu/css/property.css
@@ -415,5 +415,5 @@
     font-family: 'RobotoBold';
     text-transform: uppercase;
     font-size: 1.2rem;
-    margin-top: 15%;
+    margin-top: 6px;
 }
