--- a/src/components/accountmenu/css/header.css
+++ b/src/components/accountmenu/css/header.css
@@ -30,7 +30,7 @@
 }
 
 .accountmenu__topdata__nick {
-    font-family: 'RobotoBold';
+    font-family: 'HACKED';
     font-size: 2.7rem;
     color: #fff;
 }
