--- a/src/components/accountmenu/css/property.css
+++ b/src/components/accountmenu/css/property.css
@@ -391,7 +391,7 @@
     flex-direction: column;
     border-bottom: 4px solid rgba(72, 72, 72, 0.1);
     margin-bottom: 8%;
-    height: 40vh;
+    height: 400px;
 }
 
 .accountmenu__content__cards__car:last-child {
