--- a/src/components/accountmenu/css/property.css
+++ b/src/components/accountmenu/css/property.css
@@ -201,7 +201,6 @@
 }
 
 .accountmenu__list__business {
-    overflow-y: auto;
     margin-top: 5%;
     display: flex;
     flex-direction: column;
@@ -327,29 +326,12 @@
     align-items: center;
 }
 
-.accountmenu__scrollable {
-    overflow-y: auto !important;
-}
-
-.accountmenu__scrollable::-webkit-scrollbar {
-   width: 0.8rem !important;
- }
-   
- .accountmenu__scrollable::-webkit-scrollbar-track {
-   background: #303030 !important;
- }
-   
- .accountmenu__scrollable::-webkit-scrollbar-thumb {
-   background: #fff !important;
-}
-
-
 .accountmenu__content__cards__cars__list {
     padding-left: 3.5rem;
     padding-right: 3.5rem;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow: scroll;
 }
 
 .accountmenu__content__cards__cars__list::-webkit-scrollbar {
@@ -391,7 +373,7 @@
     flex-direction: column;
     border-bottom: 4px solid rgba(72, 72, 72, 0.1);
     margin-bottom: 8%;
-    height: 400px;
+    height: 40vh;
 }
 
 .accountmenu__content__cards__car:last-child {
