tiny btn update

--- a/src/components/accountmenu/css/property.css
+++ b/src/components/accountmenu/css/property.css
@@ -148,6 +148,7 @@
     cursor: pointer;
     display: flex;
     justify-content: center;
+    min-height: 2vh;
 }
 
 .accountmenu__content__cards__button:hover {
