- Правки по вёрстке

--- a/src/components/accountmenu/css/reports.css
+++ b/src/components/accountmenu/css/reports.css
@@ -331,7 +331,7 @@
  }
 
  .accountmenu__report__input {
-     color: #525252;
+     color: #ededed;
      font-size: 1.2rem;
      width: 100%;
  }
