new gunshop menu + accountmenu img url fixes

--- a/src/components/accountmenu/css/faq.css
+++ b/src/components/accountmenu/css/faq.css
@@ -189,6 +189,7 @@
     background-size: 100%;
     border-radius: 0.4rem;
     background-repeat: no-repeat;
+    background-image: url('https://dednet.ru/client/images/mmenu/all/question-bg.png');
 }
 
 .accountmenu__cards__question__icon__container__active {
