--- a/src/components/hudmenus/carrent/css/header.css
+++ b/src/components/hudmenus/carrent/css/header.css
@@ -7,8 +7,8 @@
 }
 
 .carrent__content__header__banner {
-    width: 20%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .carrent__content__header__title {
