--- a/src/components/hudmenus/gunshop/css/catalogpanel.css
+++ b/src/components/hudmenus/gunshop/css/catalogpanel.css
@@ -34,8 +34,7 @@
 
 .hmenu__gunshop__catalog__item__img {
     width: 75%;
-    height: auto;
-    max-height: 160px;
+    height: 160px;
     object-fit: contain;
 }
 
