--- a/src/components/hudmenus/gunshop/css/navpanel.css
+++ b/src/components/hudmenus/gunshop/css/navpanel.css
@@ -23,6 +23,7 @@
     align-items: center;
     margin-bottom: auto;
     margin-top: 200px;
+    overflow-x: auto;
 }
 
 .hmenu__gunshop__navpanel__list__item {
