tatoo menu fixes

--- a/src/components/hudmenus/gunshop/css/catalogpanel.css
+++ b/src/components/hudmenus/gunshop/css/catalogpanel.css
@@ -106,5 +106,5 @@
     padding-right: 1.3rem;
     border-radius: 0.4rem;
     font-family: 'RobotoBold';
-    background-color: red;
+    background-color: #ef3038;
 }
