--- a/src/components/hudmenus/tatoo/css/item.css
+++ b/src/components/hudmenus/tatoo/css/item.css
@@ -1,10 +1,30 @@
-.tatoo__content__list__item {
+.tatoo__content__list__item__name {
     font-family: 'RobotoLight';
-    padding-top: 0.6rem;
-    padding-bottom: 0.6rem;
     font-size: 1.4rem;
     letter-spacing: 0.05rem;
+}
+
+.tatoo__content__list__item__sale {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: 0.4rem;
+    font-size: 0.9rem;
+    font-family: 'RobotoBold';
+    background-color: #ef3038;
+}
+
+.tatoo__content__list__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+    padding-left: 8%;
+    padding-right: 8%;
     cursor: pointer;
+    align-items: center;
 }
 
 .tatoo__content__list__item:hover {
