--- a/src/components/hudmenus/tatoo/css/item.css
+++ b/src/components/hudmenus/tatoo/css/item.css
@@ -19,8 +19,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 0.6rem;
-    padding-bottom: 0.6rem;
+    padding-top: 2%;
+    padding-bottom: 2%;
     padding-left: 8%;
     padding-right: 8%;
     cursor: pointer;
