--- a/src/components/hudmenus/tatoo/css/item.css
+++ b/src/components/hudmenus/tatoo/css/item.css
@@ -21,6 +21,7 @@
     justify-content: space-between;
     padding-top: 2%;
     padding-bottom: 2%;
+    min-height: 3vh;
     padding-left: 8%;
     padding-right: 8%;
     cursor: pointer;
