--- a/src/components/hudmenus/carrent/css/car.css
+++ b/src/components/hudmenus/carrent/css/car.css
@@ -31,14 +31,23 @@
 
 .carrent__content__list__item__info__price {
     font-family: 'RobotoBold';
-    font-size: 1.8rem;
+    font-size: 2.2rem;
 }
 
 .carrent__content__list__item__info__rentbtn {
     font-family: 'RobotoBold';
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     cursor: pointer;
     padding: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    margin-bottom: 3%;
+    width: 100%;
+    text-align: center;
+}
+
+.carrent__content__list__item__info__rentbtn:hover {
+    background: #fff;
+    color: #000;
 }
 
 .carrent__content__list__item__info {
@@ -58,4 +67,27 @@
     padding-bottom: 0.8rem;
     font-family: 'RobotoBold';
     letter-spacing: 0.05rem;
+}
+
+.carrent__content__list__img__container__data {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.carrent__content__list__item__info__rent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.carrent__content__list__item__sale {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
+    border-radius: 0.4rem;
+    font-family: 'RobotoBold';
+    background-color: #ef3038;
 }
