--- a/src/components/govmenu/css/main.css
+++ b/src/components/govmenu/css/main.css
@@ -6,3 +6,10 @@
     padding-left: 7%;
     padding-right: 7%;
 }
+/*
+#box {
+    background-image: url('https://sun3-13.userapi.com/413KDSuEI9aZSUnFRXI9k-g9bI4FOUZuDOBuVA/WCUfY0r8Uuc.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+*/
