--- a/src/components/accountmenu/css/faq.css
+++ b/src/components/accountmenu/css/faq.css
@@ -71,7 +71,33 @@
     margin-bottom: 10%;
 }
 
-.accountmenu__content__cards__bigbutton {
+.accountmenu__content__cards__bigbutton_red {
+    background: linear-gradient(to bottom right, #ED213A, #93291E);
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    border-radius: 0.4rem;
+    box-shadow: 0 0 16px rgba(243, 85, 98, 0.34);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+.accountmenu__content__cards__bigbutton_disabled {
+    background: linear-gradient(to bottom right, #5f5f5f, #858484);
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    border-radius: 0.4rem;
+    box-shadow: 0 0 16px rgba(168, 168, 168, 0.34);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+.accountmenu__content__cards__bigbutton_blue {
     background: linear-gradient(to bottom right, #70cfff, #43b2ea);
     padding-left: 2.5rem;
     padding-right: 2.5rem;
